<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Domande">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/linear">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
<!--1°domanda-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/d1"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <RadioGroup
                    android:id="@+id/d1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/btn1.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textColor="@color/white"
                        android:text="Sì"
                        android:buttonTint="@color/fucsia"/>
                    <RadioButton
                        android:id="@+id/btn1.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="No"
                        android:buttonTint="@color/fucsia"/>
                </RadioGroup>
<!--2°domanda-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:text="@string/d2"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <RadioGroup
                    android:id="@+id/d2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/btn2.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textColor="@color/white"
                        android:text="Sì"
                        android:buttonTint="@color/fucsia"/>
                    <RadioButton
                        android:id="@+id/btn2.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="No"
                        android:buttonTint="@color/fucsia"/>
                </RadioGroup>
<!--3°domanda-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:text="@string/d3"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <RadioGroup
                    android:id="@+id/d3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/btn3.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textColor="@color/white"
                        android:text="Sì"
                        android:buttonTint="@color/fucsia"/>
                    <RadioButton
                        android:id="@+id/btn3.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="No"
                        android:buttonTint="@color/fucsia"/>
                </RadioGroup>
<!--4°domanda-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:text="@string/d4"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <RadioGroup
                    android:id="@+id/d4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/btn4.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textColor="@color/white"
                        android:text="Sì"
                        android:buttonTint="@color/fucsia"/>
                    <RadioButton
                        android:id="@+id/btn4.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="No"
                        android:buttonTint="@color/fucsia"/>
                </RadioGroup>
<!--5°domanda-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:text="@string/d5"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <RadioGroup
                    android:id="@+id/d5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/btn5.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textColor="@color/white"
                        android:text="Sì"
                        android:buttonTint="@color/fucsia"/>
                    <RadioButton
                        android:id="@+id/btn5.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="No"
                        android:buttonTint="@color/fucsia"/>
                </RadioGroup>
<!--6°domanda-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:text="@string/d6"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <RadioGroup
                    android:id="@+id/d6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/btn6.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textColor="@color/white"
                        android:text="Sì"
                        android:buttonTint="@color/fucsia"/>
                    <RadioButton
                        android:id="@+id/btn6.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="No"
                        android:buttonTint="@color/fucsia"/>
                </RadioGroup>
<!--7°domanda-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:text="@string/d7"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <RadioGroup
                    android:id="@+id/d7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/btn7.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textColor="@color/white"
                        android:text="Sì"
                        android:buttonTint="@color/fucsia"/>
                    <RadioButton
                        android:id="@+id/btn7.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="No"
                        android:buttonTint="@color/fucsia"/>
                </RadioGroup>
<!--8°domanda-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:text="@string/d8"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <RadioGroup
                    android:id="@+id/d8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/btn8.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textColor="@color/white"
                        android:text="Sì"
                        android:buttonTint="@color/fucsia"/>
                    <RadioButton
                        android:id="@+id/btn8.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="No"
                        android:buttonTint="@color/fucsia"/>
                </RadioGroup>
<!--9°domanda-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:text="@string/d9"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <RadioGroup
                    android:id="@+id/d9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/btn9.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textColor="@color/white"
                        android:text="Sì"
                        android:buttonTint="@color/fucsia"/>
                    <RadioButton
                        android:id="@+id/btn9.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="No"
                        android:buttonTint="@color/fucsia"/>
                </RadioGroup>
<!--10°domanda-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:text="@string/d10"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <RadioGroup
                    android:id="@+id/d10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/btn10.1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textColor="@color/white"
                        android:text="Sì"
                        android:buttonTint="@color/fucsia"/>
                    <RadioButton
                        android:id="@+id/btn10.2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="No"
                        android:buttonTint="@color/fucsia"/>
                </RadioGroup>
                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/orange"
                    android:text="Invia"
                    android:onClick="result"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:padding="7dp"
                    android:id="@+id/tr0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
                <TextView
                    android:padding="7dp"
                    android:id="@+id/tr1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
                <TextView
                    android:padding="7dp"
                    android:id="@+id/tr2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
                <TextView
                    android:padding="7dp"
                    android:id="@+id/tr3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
                <TextView
                    android:padding="7dp"
                    android:id="@+id/tr4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
                <TextView
                    android:padding="7dp"
                    android:id="@+id/tr5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/orange"
                    android:text="Reset"
                    android:onClick="restart"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>